# ETL-ACCIDENTES-BOMBEROS-PERU

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: dag_accidents.py
scripts/initdb/: 01_create_bomberos_db.sql  02_create_silver.table.sql  03_create_gold_dim_tipo.table.sql  04_create_gold_dim_distrito.table.sql  05_create_gold_dim_estado.table.sql  06_create_gold_dim_tiempo.table.sql  07_create_gold_fact_accidentes.table.sql
src/extract/: scraper.py
src/load/: gold_to_storage.py  hash_to_storage.py  raw_to_storage.py  silver_to_storage.py
src/transform/: transform_gold.py  transform_silver.py
src/utils/: db.py  hashing.py
src/validation/: validate_bronze.py
tests/: test_gold_to_storage.py  test_hash_to_storage.py  test_hashing.py  test_raw_to_storage.py  test_scraper.py  test_silver_to_storage.py  test_transform_gold.py  test_transform_silver.py  test_validate_bronze.py
