[project]
name = "etl-accidentes"
version = "0.1.0"
description = "Pipeline de scraping de emergencias de bomberos Peru"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "great-expectations>=1.18.2",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "pendulum>=3.2.0",
    "psycopg2-binary>=2.9.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
